--- a/setup.cfg
+++ b/setup.cfg
@@ -6,7 +6,7 @@ author_email = distutils-sig@python.org
 description = Easily download, build, install, upgrade, and uninstall Python packages
 long_description = file:README.rst
 url = https://github.com/pypa/setuptools
-classifiers =
+classifiers = 
 	Development Status :: 5 - Production/Stable
 	Intended Audience :: Developers
 	License :: OSI Approved :: MIT License
@@ -17,18 +17,16 @@ classifiers =
 	Topic :: System :: Systems Administration
 	Topic :: Utilities
 keywords = CPAN PyPI distutils eggs package management
-project_urls =
+project_urls = 
 	Documentation = https://setuptools.pypa.io/
 
 [options]
 packages = find_namespace:
-# disabled as it causes tests to be included #2505
-# include_package_data = true
 python_requires = >=3.6
-install_requires =
+install_requires = 
 
 [options.packages.find]
-exclude =
+exclude = 
 	build*
 	dist*
 	docs*
@@ -37,21 +35,17 @@ exclude =
 	tools*
 
 [options.extras_require]
-testing =
-	# upstream
+testing = 
 	pytest >= 6
 	pytest-checkdocs >= 2.4
 	pytest-flake8
 	pytest-black >= 0.3.7; \
-		# workaround for jaraco/skeleton#22
-		python_implementation != "PyPy"
+	python_implementation != "PyPy"
 	pytest-cov
 	pytest-mypy; \
-		# workaround for jaraco/skeleton#22
-		python_implementation != "PyPy"
+	python_implementation != "PyPy"
 	pytest-enabler >= 1.0.1
-
-	# local
+	
 	mock
 	flake8-2020
 	virtualenv>=13.0.0
@@ -63,26 +57,21 @@ testing =
 	pytest-xdist
 	sphinx
 	jaraco.path>=3.2.0
-
-docs =
-	# upstream
+docs = 
 	sphinx
 	jaraco.packaging >= 8.2
 	rst.linker >= 1.9
 	jaraco.tidelift >= 1.4
-
-	# local
+	
 	pygments-github-lexers==0.0.5
 	sphinx-inline-tabs
 	sphinxcontrib-towncrier
 	furo
-
-ssl =
-
-certs =
+ssl = 
+certs = 
 
 [options.entry_points]
-distutils.commands =
+distutils.commands = 
 	alias = setuptools.command.alias:alias
 	bdist_egg = setuptools.command.bdist_egg:bdist_egg
 	bdist_rpm = setuptools.command.bdist_rpm:bdist_rpm
@@ -103,10 +92,10 @@ distutils.commands =
 	setopt = setuptools.command.setopt:setopt
 	test = setuptools.command.test:test
 	upload_docs = setuptools.command.upload_docs:upload_docs
-setuptools.finalize_distribution_options =
+setuptools.finalize_distribution_options = 
 	parent_finalize = setuptools.dist:_Distribution.finalize_options
 	keywords = setuptools.dist:Distribution._finalize_setup_keywords
-distutils.setup_keywords =
+distutils.setup_keywords = 
 	eager_resources = setuptools.dist:assert_string_list
 	namespace_packages = setuptools.dist:check_nsp
 	extras_require = setuptools.dist:check_extras
@@ -125,7 +114,7 @@ distutils.setup_keywords =
 	test_loader = setuptools.dist:check_importable
 	test_runner = setuptools.dist:check_importable
 	use_2to3 = setuptools.dist:invalid_unless_false
-egg_info.writers =
+egg_info.writers = 
 	PKG-INFO = setuptools.command.egg_info:write_pkg_info
 	requires.txt = setuptools.command.egg_info:write_requirements
 	entry_points.txt = setuptools.command.egg_info:write_entries
@@ -136,8 +125,9 @@ egg_info.writers =
 	dependency_links.txt = setuptools.command.egg_info:overwrite_arg
 
 [egg_info]
-tag_build = .post
-tag_date = 1
+tag_build = 
+tag_date = 0
 
 [sdist]
 formats = zip
+
