--- a/setup.cfg
+++ b/setup.cfg
@@ -6,7 +6,7 @@ author_email = distutils-sig@python.org
 description = Easily download, build, install, upgrade, and uninstall Python packages
 long_description = file:README.rst
 url = https://github.com/pypa/setuptools
-classifiers =
+classifiers = 
 	Development Status :: 5 - Production/Stable
 	Intended Audience :: Developers
 	License :: OSI Approved :: MIT License
@@ -17,19 +17,17 @@ classifiers =
 	Topic :: System :: Systems Administration
 	Topic :: Utilities
 keywords = CPAN PyPI distutils eggs package management
-project_urls =
+project_urls = 
 	Documentation = https://setuptools.pypa.io/
 	Changelog = https://setuptools.pypa.io/en/stable/history.html
 
 [options]
 packages = find_namespace:
-# disabled as it causes tests to be included #2505
-# include_package_data = true
 python_requires = >=3.8
-install_requires =
+install_requires = 
 
 [options.packages.find]
-exclude =
+exclude = 
 	*.tests
 	*.tests.*
 	tools*
@@ -40,19 +38,15 @@ exclude =
 	docs.*
 
 [options.extras_require]
-testing =
-	# upstream
+testing = 
 	pytest >= 6, != 8.1.1
 	pytest-checkdocs >= 2.4
 	pytest-cov; \
-		# coverage seems to make PyPy extremely slow
-		python_implementation != "PyPy"
+	python_implementation != "PyPy"
 	pytest-mypy
 	pytest-enabler >= 2.2
-	# workaround for pypa/setuptools#3921
 	pytest-ruff >= 0.2.1; sys_platform != "cygwin"
-
-	# local
+	
 	virtualenv>=13.0.0
 	wheel
 	pip>=19.1 # For proper file:// URLs support.
@@ -66,18 +60,13 @@ testing =
 	tomli-w>=1.0.0
 	pytest-timeout
 	pytest-perf; \
-		# workaround for jaraco/inflect#195, pydantic/pydantic-core#773 (see #3986)
-		sys_platform != "cygwin"
-	# for tools/finalize.py
+	sys_platform != "cygwin"
 	jaraco.develop >= 7.21; python_version >= "3.9" and sys_platform != "cygwin"
 	pytest-home >= 0.5
 	mypy==1.9  # pin mypy version so a new version doesn't suddenly cause the CI to fail
-	# No Python 3.11 dependencies require tomli, but needed for type-checking since we import it directly
 	tomli
-	# No Python 3.12 dependencies require importlib_metadata, but needed for type-checking since we import it directly
 	importlib_metadata
-
-testing-integration =
+testing-integration = 
 	pytest
 	pytest-xdist
 	pytest-enabler
@@ -89,32 +78,26 @@ testing-integration =
 	build[virtualenv]>=1.0.3
 	filelock>=3.4.0
 	packaging>=23.2
-
-docs =
-	# upstream
+docs = 
 	sphinx >= 3.5
 	jaraco.packaging >= 9.3
 	rst.linker >= 1.9
 	furo
 	sphinx-lint
-
-	# tidelift
+	
 	jaraco.tidelift >= 1.4
-
-	# local
+	
 	pygments-github-lexers==0.0.5
 	sphinx-favicon
 	sphinx-inline-tabs
 	sphinx-reredirects
 	sphinxcontrib-towncrier
 	sphinx-notfound-page >=1,<2
-
-ssl =
-
-certs =
+ssl = 
+certs = 
 
 [options.entry_points]
-distutils.commands =
+distutils.commands = 
 	alias = setuptools.command.alias:alias
 	bdist_egg = setuptools.command.bdist_egg:bdist_egg
 	bdist_rpm = setuptools.command.bdist_rpm:bdist_rpm
@@ -137,10 +120,10 @@ distutils.commands =
 	setopt = setuptools.command.setopt:setopt
 	test = setuptools.command.test:test
 	upload_docs = setuptools.command.upload_docs:upload_docs
-setuptools.finalize_distribution_options =
+setuptools.finalize_distribution_options = 
 	parent_finalize = setuptools.dist:_Distribution.finalize_options
 	keywords = setuptools.dist:Distribution._finalize_setup_keywords
-distutils.setup_keywords =
+distutils.setup_keywords = 
 	eager_resources = setuptools.dist:assert_string_list
 	namespace_packages = setuptools.dist:check_nsp
 	extras_require = setuptools.dist:check_extras
@@ -159,7 +142,7 @@ distutils.setup_keywords =
 	test_loader = setuptools.dist:check_importable
 	test_runner = setuptools.dist:check_importable
 	use_2to3 = setuptools.dist:invalid_unless_false
-egg_info.writers =
+egg_info.writers = 
 	PKG-INFO = setuptools.command.egg_info:write_pkg_info
 	requires.txt = setuptools.command.egg_info:write_requirements
 	entry_points.txt = setuptools.command.egg_info:write_entries
@@ -169,8 +152,9 @@ egg_info.writers =
 	dependency_links.txt = setuptools.command.egg_info:overwrite_arg
 
 [egg_info]
-tag_build = .post
-tag_date = 1
+tag_build = 
+tag_date = 0
 
 [sdist]
 formats = zip
+
